--- a/public/updater.html
+++ b/public/updater.html
@@ -7,7 +7,9 @@
     <link rel="preload" as="image" href="img/loading.svg">
     <link rel="preload" as="image" href="img/close.svg">
     <link rel="preload" as="image" href="img/check.svg">
+    <link rel="preload" as="image" href="img/game.svg">
     <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="js/global.js"></script>
     <script src="js/updater.js"></script>
     <title>Asset Updater</title>
@@ -15,7 +17,10 @@
 <body>
 <div id="banner">
     <div class="container">
-        <div class="header">Asset Updater</div>
+        <div class="header">
+            <div class="icon" id="logo"></div>
+            Asset Updater
+        </div>
     </div>
 </div>
 <div id="selection">
@@ -32,20 +37,35 @@
             <div class="header">Recent folders</div>
             <div id="recent-folders-content"></div>
         </div>
-    </div>
-
-</div>
-
-<div id="selected-path">
-    <div class="container">
         <div class="box" id="selected-path-box">
-            <div id="path"><div class="icon" id="folder-icon"></div><div id="pathname">No path selected</div></div>
+            <div id="path">
+                <div class="icon" id="folder-icon"></div>
+                <div id="pathname">No path selected</div>
+            </div>
         </div>
     </div>
+
 </div>
 
 <div id="assets">
     <div class="container">
+        <div class="box" id="assets-count">
+            <div class="icon" id="game-icon"></div>
+            <div class="count-assets"><span>No</span> asset(s) found</div>
+        </div>
+        <div class="box" id="assets-progress">
+            <div id="progress-text">Progress</div>
+            <div class="progress" id="check-progress">
+                <div class="progress-bar">
+                    <div class="progress-bar-background"></div>
+                </div>
+            </div>
+        </div>
+        <div class="box" id="assets-summary">
+            <div class="icon" id="update-icon"></div>
+            <div class="count-updates"><span>No</span> update(s) found</div>
+        </div>
+
         <div class="box" id="assets-box">
             <div class="header">All Assets</div>
             <div id="assets-content">No assets</div>
@@ -58,7 +78,7 @@
 </div>
 
 <div id="notify">
-    <div id="notify-message">test</div>
+    <div id="notify-message"></div>
 </div>
 </body>
 </html>
