--- a/public/dependencies.html
+++ b/public/dependencies.html
@@ -11,7 +11,7 @@
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/global.js"></script>
-    <script src="js/updater.js"></script>
+    <script src="js/dependencies.js"></script>
     <title>Asset Updater</title>
 </head>
 <body>
@@ -21,9 +21,9 @@
             <div class="icon" id="logo"></div>
             Asset Updater
             <div id="nav">
-                <div class="active">Updates</div>
+                <div onclick="openTab('')">Updates</div>
                 <div onclick="openTab('downloads')">Downloads</div>
-                <div onclick="openTab('dependencies')">Dependencies</div>
+                <div class="active">Dependencies</div>
             </div>
         </div>
     </div>
@@ -68,7 +68,7 @@
         </div>
         <div class="box" id="assets-summary">
             <div class="icon" id="update-icon"></div>
-            <div class="count-updates"><span>No</span> update(s) found</div>
+            <div class="count-updates"><span>No</span> dependencies(s)</div>
         </div>
 
         <div class="box" id="assets-box">
@@ -76,7 +76,7 @@
             <div id="assets-content">No assets</div>
         </div>
         <div class="box" id="update-assets-box">
-            <div class="header">Assets with updates</div>
+            <div class="header">Assets with missing dependencies</div>
             <div id="update-assets-content">No assets</div>
         </div>
     </div>
