Add duplicate detection capability

--- a/public/dependencies.html
+++ b/public/dependencies.html
@@ -24,6 +24,7 @@
                 <div onclick="openTab('')">Updates</div>
                 <div onclick="openTab('downloads')">Downloads</div>
                 <div class="active">Dependencies</div>
+                <div onclick="openTab('duplicates')">Duplicates</div>
             </div>
         </div>
     </div>
