--- a/public/downloads.html
+++ b/public/downloads.html
@@ -22,6 +22,7 @@
                 <div class="active" onclick="openTab('')">Updates</div>
                 <div class="active">Downloads</div>
                 <div onclick="openTab('dependencies')">Dependencies</div>
+                <div onclick="openTab('duplicates')">Duplicates</div>
             </div>
         </div>
     </div>
