--- a/public/duplicates.html
+++ b/public/duplicates.html
@@ -9,9 +9,8 @@
     <link rel="preload" as="image" href="img/check.svg">
     <link rel="preload" as="image" href="img/game.svg">
     <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
     <script src="js/global.js"></script>
-    <script src="js/updater.js"></script>
+    <script src="js/duplicates.js"></script>
     <title>Asset Updater</title>
 </head>
 <body>
@@ -21,10 +20,10 @@
             <div class="icon" id="logo"></div>
             Asset Updater
             <div id="nav">
-                <div class="active">Updates</div>
+                <div onclick="openTab('')">Updates</div>
                 <div onclick="openTab('downloads')">Downloads</div>
                 <div onclick="openTab('dependencies')">Dependencies</div>
-                <div onclick="openTab('duplicates')">Duplicates</div>
+                <div class="active">Duplicates</div>
             </div>
         </div>
     </div>
@@ -69,7 +68,7 @@
         </div>
         <div class="box" id="assets-summary">
             <div class="icon" id="update-icon"></div>
-            <div class="count-updates"><span>No</span> update(s) found</div>
+            <div class="count-updates"><span>No</span> duplicate(s)</div>
         </div>
 
         <div class="box" id="assets-box">
@@ -77,7 +76,7 @@
             <div id="assets-content">No assets</div>
         </div>
         <div class="box" id="update-assets-box">
-            <div class="header">Assets with updates</div>
+            <div class="header">Assets with duplicates</div>
             <div id="update-assets-content">No assets</div>
         </div>
     </div>
